[package]
name = "light-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { path = "../client" }
solana-sdk = { path = "../sdk" }
actix-web = "4.2.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.14.1", features = ["full"]} 
borsh = "0.9.3"
bincode = "1.3.3"
bs58 = "0.4.0"
