[package]
name = "light-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { path = "../client" }
solana-sdk = { path = "../sdk" }
solana-version = { path = "../version" }
actix-web = "4.2.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.14.1", features = ["full"]} 
bincode = "1.3.3"
bs58 = "0.4.0"
thiserror = "1.0.37"
base64 = "0.13.1"
futures = "0.3.25"
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut"] }

[[bench]]
name="tps"
harness=false

